Make Availability backend to work